remove a without href + fix sidenav ui + overflow fixed

--- a/src/components/SideNav/SideNav.module.scss
+++ b/src/components/SideNav/SideNav.module.scss
@@ -10,18 +10,23 @@
    width: 70%;
    max-width: 350px;
    height: 100%;
-   background-color: $lightBlueColor;
+   background-color: $darkBlueColor;
    z-index: 9999999;
-   overflow-y: scroll;
+   overflow-y: auto;
    div.CloseIconDiv{
       width: 100%;
       height: 80px;
       position: relative;
-      &>div{
+      & div{
          position: absolute;
-         right: 20px;
          top: 40px;
          transform: translateY(-50%);
+      }
+      & div:last-of-type{
+         right: 10%;
+      }
+      & div:first-of-type{
+         left: 10%;
       }
    }
    ul{
@@ -29,23 +34,17 @@
       list-style: none;
       padding: 0;
       margin: 0;
-      li:first-of-type a{
-         border-top: 1px solid rgb(146, 145, 145);
-      }
       li{
          font-size: 1.2em;
-         a{
-            display: block;
-            padding: 30px 0 30px 20px;
-            text-decoration: none;
-            color: $whiteColor;
-            border-bottom: 1px solid rgb(146, 145, 145);
-         }
-         a.ActiveLink{
-            background-color: $greenColor;
-            transition: background 0.3s;
-            border-bottom-color: $greenColor;
-         }
+         padding: 30px 0 30px 10%;
+         text-decoration: none;
+         color: $whiteColor;
+         cursor: pointer;
+      }
+      li.ActiveLink{
+         background-color: $greenColor;
+         transition: background 0.3s;
+         color: $whiteColor;
       }
    }
 }
